Icon hinzugefuegt und Window Settings angepasst (XAML)

--- a/Ticketautomat/MainWindow.xaml
+++ b/Ticketautomat/MainWindow.xaml
@@ -5,6 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ticketautomat"
         mc:Ignorable="d"
+        Icon="Resources/Images/softwareIcon.png"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="SingleBorderWindow"
+        ResizeMode="NoResize"
         Title="TicketCenter" Height="900" Width="1600">
     <Grid>
         
