--- a/Ticketautomat/MainWindow.xaml
+++ b/Ticketautomat/MainWindow.xaml
@@ -12,7 +12,7 @@
         Title="TicketCenter" Height="900" Width="1600">
     <Grid x:Name="ParentGrid">
         <Grid x:Name="Overlay">
-            <Rectangle x:Name="Rectangle_TopBarBackground" Fill="DarkSlateGray" Height="25" Width="1600" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Rectangle x:Name="Rectangle_TopBarBackground" Fill="ForestGreen" Height="25" Width="1600" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <!--Wird später mit einer Grafik ersetzt-->
             <Button x:Name="Button_Close" Content="X" Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="25, 0" Click="Button_Close_Click" Cursor="Hand"/>
             <Button x:Name="Button_Version" Content="i" Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="75, 0" Click="Button_Version_Click" Cursor="Hand"/>
@@ -44,8 +44,8 @@
             </Grid>
         </Grid>
         <Grid x:Name="PriceTable" Visibility="Collapsed">
-            <!--Hintergrund nicht vergessen!-->
-            <Rectangle x:Name="Rectangle_PriceTable_BelowTitle" Fill="DarkSlateGray" Height="7" Width="1450" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 150"/>
+            <Image Source="Resources/Images/background_table.png"/>
+            <Rectangle x:Name="Rectangle_PriceTable_BelowTitle" Fill="ForestGreen" Height="7" Width="1450" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 150"/>
             <Label x:Name="Label_PriceTable_Title" Content="AKTUELLE TICKETPREISE" Height="130" Width="1325" FontSize="90" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="40,40,0,0"/>
             <Label x:Name="Label_PriceTable_Hint" Content="Die Ticketpreise können sich innerhalb eines Tages mehrfach ändern.&#x0a;Kontaktieren Sie bei weiteren Fragen unseren Kundenservice." HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0, 135" FontSize="20"/>
             <Label x:Name="Label_PriceTable_AsOfToday" Content="Stand: Lädt..." HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100, 155" FontSize="20"/>
@@ -91,6 +91,53 @@
                 <Label x:Name="Label_PriceTable_Table_Pensioner_A" Content="Lädt..." Grid.Column="5" Grid.Row="3" FontSize="30"/>
                 <Label x:Name="Label_PriceTable_Table_Pensioner_B" Content="Lädt..." Grid.Column="5" Grid.Row="4" FontSize="30"/>
                 <Label x:Name="Label_PriceTable_Table_Pensioner_C" Content="Lädt..." Grid.Column="5" Grid.Row="5" FontSize="30"/>
+            </Grid>
+        </Grid>
+        <Grid x:Name="BuyMenu" Visibility="Collapsed">
+            <Rectangle x:Name="Rectangle_BuyMenu_BelowTitle" Fill="ForestGreen" Height="7" Width="1450" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 150"/>
+            <Rectangle x:Name="Rectangle_BuyMenu_BelowTicketOptions" Fill="ForestGreen" Height="7" Width="950" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 0"/>
+            <Label x:Name="Label_BuyMenu_Title" Content="TICKET KAUFEN" Height="130" Width="1325" FontSize="90" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="40,40,0,0"/>
+            <Button x:Name="Button_BuyMenu_GoToCart" Content="Warenkorb&#x0a;anzeigen" Height="60" Width="200" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,60,235,0" Click="Button_MainMenu_GoToCart_Click" Cursor="Hand"/>
+            <Button x:Name="Button_BuyMenu_GoBackButton" Content="Zurück" Height="30" Width="200" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,90,30,0" Click="Button_BuyMenu_GoBackButton_Click" Cursor="Hand"/>
+            <Grid x:Name="BuyMenu_TicketOptions" Margin="250,250">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Label x:Name="Label_BuyMenu_TicketOptions_TariffOptionTitle" Content="TARIFOPTION" Grid.Row="0" Grid.Column="0" FontSize="30" FontWeight="Bold"/>
+                <Label x:Name="Label_BuyMenu_TicketOptions_StartTitle" Content="START" Grid.Row="1" Grid.Column="0" FontSize="30" FontWeight="Bold"/>
+                <Label x:Name="Label_BuyMenu_TicketOptions_DestinationTitle" Content="ZIEL" Grid.Row="2" Grid.Column="0" FontSize="30" FontWeight="Bold"/>
+                <Grid x:Name="BuyMenu_TicketOptions_TariffOptions" Grid.Row="0" Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="4*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="Button_BuyMenu_TicketOptions_TariffOption_Adult" Content="ERWACHSENER" FontSize="20" Click="Button_BuyMenu_TicketOptions_TariffOption_Adult_Click" Cursor="Hand" Grid.Column="0"/>
+                    <Button x:Name="Button_BuyMenu_TicketOptions_TariffOption_Child" Content="KIND" FontSize="20" Click="Button_BuyMenu_TicketOptions_TariffOption_Child_Click" Cursor="Hand" Grid.Column="1"/>
+                    <Button x:Name="Button_BuyMenu_TicketOptions_TariffOption_Pensioner" Content="SENIOR" FontSize="20" Click="Button_BuyMenu_TicketOptions_TariffOption_Pensioner_Click" Cursor="Hand" Grid.Column="2"/>
+                    <Button x:Name="Button_BuyMenu_TicketOptions_TariffOption_Reduced" Content="ERMÄßIGT" FontSize="20" Click="Button_BuyMenu_TicketOptions_TariffOption_Reduced_Click"  Cursor="Hand" Grid.Column="3"/>
+                </Grid>
+                <Button x:Name="Button_BuyMenu_TicketOptions_StartButton" Content="SIMMERSTEIN" Background="Yellow" FontSize="30" Click="Button_BuyMenu_TicketOptions_StartButton_Click" Cursor="Hand" Grid.Row="1" Grid.Column="1"/>
+                <Button x:Name="Button_BuyMenu_TicketOptions_DestinationButton" Content="ECHSENSTADT" Background="CornflowerBlue" FontSize="30" Click="Button_BuyMenu_TicketOptions_DestinationButton_Click" Cursor="Hand" Grid.Row="2" Grid.Column="1"/>
+                <Button x:Name="Button_BuyMenu_TicketOptions_DisplayRoutes" Content="Abfahrten anzeigen" FontSize="10" Click="Button_BuyMenu_TicketOptions_DisplayRoutes_Click" Cursor="Hand" Grid.Row="3" Grid.Column="1" Width="200" Height="20" Margin="533,15,0,15"/>
+            </Grid>
+            <Grid x:Name="BuyMenu_TicketSelection" Margin="100,50">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="100px"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Button x:Name="Button_BuyMenu_TicketSelection_Cheapest" Content="GÜNSTIGSTE OPTION&#x0a;BESTELLEN" FontSize="60" Height="300" VerticalAlignment="Bottom" Grid.Column="0" Click="Button_BuyMenu_TicketSelection_Cheapest_Click" Cursor="Hand"/>
+                <Button x:Name="Button_BuyMenu_TicketSelection_Fastest" Content="WENIGSTE STATIONEN&#x0a;BESTELLEN" FontSize="60" Height="300" VerticalAlignment="Bottom" Grid.Column="2" Click="Button_BuyMenu_TicketSelection_Fastest_Click" Cursor="Hand"/>
             </Grid>
         </Grid>
         <Grid x:Name="ErrorWindow" Visibility="Collapsed">
