--- a/Ticketautomat/MainWindow.xaml
+++ b/Ticketautomat/MainWindow.xaml
@@ -147,8 +147,26 @@
             <Button x:Name="Button_ShoppingCart_GoBackButton" Content="Zurück" Height="30" Width="200" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,90,30,0" Click="Button_BuyMenu_GoBackButton_Click" Cursor="Hand"/>
             <Button x:Name="Button_ShoppingCart_PayNowButton" Content="Jetzt bezahlen" Height="60" Width="250" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,634,235,0" Click="Button_ShoppingCart_PayNowButton_Click" Cursor="Hand"/>
             <ScrollViewer x:Name="ScrollViewer_ShoppingCart_TicketOverview" HorizontalScrollBarVisibility="Disabled" Width="900" Height="725" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20, 0">
-                <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right">
-                    <!--Hier content für Ticket-Einträge-->
+                <StackPanel>
+                    <ListBox Name="List_ShoppingCart" Width="800" Margin="20" HorizontalAlignment="Left" SelectedItem="{Binding selectedTicket}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Margin="15,10,5,10" Text="Startstation:"/>
+                                    <TextBlock Margin="0,10,0,10" Text="{Binding StartStation.StationName}"/>
+                                    <TextBlock Margin="20,10,5,10" Text="Endstation:"/>
+                                    <TextBlock Margin="0,10,0,10" Text="{Binding TargetDestination.StationName}"/>
+                                    <TextBlock Margin="20,10,5,10" Text="Preis:"/>
+                                    <TextBlock Margin="0,10,0,10" Text="{Binding PriceEntry.Price}"/>
+                                    <TextBlock Margin="0,10,0,10" Text="€"/>
+                                    <TextBlock Margin="20,10,5,10" Text="Altersgruppe:"/>
+                                    <TextBlock Margin="0,10,0,10" Text="{Binding PriceEntry.Altersgruppe}"/>
+                                    <TextBlock Margin="20,10,5,10" Text="Tarifstufe:"/>
+                                    <TextBlock Margin="0,10,0,10" Text="{Binding PriceEntry.TarifStufe}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </StackPanel>
             </ScrollViewer>
         </Grid>
